--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ header {
   left: 0;
   width: 100%;
   visibility: visible;
+  margin-bottom: 10px;
 }
 a:link {
   text-decoration: none;
@@ -464,7 +465,7 @@ a:active {
 .portfolio__item:focus .portfolio__img {
   z-index: 1;
   opacity: 0.9;
-  transform: translateY(-120px) scaleX(1.6) scaleY(1.6);
+  transform: translateY(-10rem) scaleX(1.6) scaleY(1.6);
 
   visibility: visible;
 }
